tests/expectations/compiler/bugs/b29221_fail.out
Error [ETYC0372005]: Unknown variable `N`
    --> compiler-test:6:63
     |
   6 |         let result: [u32; 2] = Deserialize::from_bits::[[u32; N]](bits);
     |                                                               ^
